--- a/package.json
+++ b/package.json
@@ -26,5 +26,14 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "@radix-icons/vue": "^1.0.0",
+        "@vueuse/core": "^11.1.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "radix-vue": "^1.9.7",
+        "tailwind-merge": "^2.5.4",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
