--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "@vueuse/core": "^11.1.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "laravel-permission-to-vuejs": "^3.0.8",
+        "lucide-vue-next": "^0.454.0",
         "radix-vue": "^1.9.8",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7"
