--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
+        "robertboes/inertia-breadcrumbs": "^0.6.0",
         "spatie/laravel-permission": "^6.9",
         "tightenco/ziggy": "^2.0"
     },
