--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -3,7 +3,7 @@ name: Fix Code Style using Pint
 on: [push]
 
 jobs:
-  lint:
+  pint:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
@@ -27,7 +27,7 @@ jobs:
       - name: Run Pint
         run: pint
 
-      - name: Commit linted files
+      - name: Commit pinted files
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Fixes coding style"
