--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "ahmedsaoud31/laravel-permission-to-vuejs": "dev-master",
+        "deployer/deployer": "^7.5",
         "diglactic/laravel-breadcrumbs": "^9.0",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.9",
