update pest action

--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -20,5 +20,8 @@ jobs:
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
 
+      - name: Set up Laravel environment
+        run: cp .env.testing .env
+
       - name: Tests
         run: ./vendor/bin/pest --ci
