--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -23,9 +23,12 @@ jobs:
       - name: Set up Laravel environment
         run: cp .env.testing .env
 
-      - uses: ryohidaka/action-setup-sqlite@v1.2.0
-        with:
-          version: "3.43.2"
+      # - uses: ryohidaka/action-setup-sqlite@v1.2.0
+      #   with:
+      #     version: "3.43.2"
+
+      - name: Run migrations
+        run: php artisan migrate --env=testing
 
       - name: Tests
         run: ./vendor/bin/pest --ci
