--- a/.env.testing
+++ b/.env.testing
@@ -1,8 +1,8 @@
 APP_NAME="Laravel Breeze Shadcn Vue Template"
-APP_ENV=local
-APP_KEY=
+APP_ENV=testing
+APP_KEY=base64:xsmABDq7epmlm9G2yEa8Wz9En6tlN2AvfRwTXjA9lAo=
 APP_DEBUG=true
-APP_TIMEZONE="UTC"
+APP_TIMEZONE="Asia/Kuala_Lumpur"
 APP_URL=http://localhost:8122
 APP_PORT=8122
 VITE_PORT=5175
