--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -8,7 +8,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -19,6 +24,12 @@ jobs:
 
       - name: Install composer dependencies
         uses: ramsey/composer-install@v3
+
+      - name: Install npm packages
+        run: npm ci && npm run build
+
+      - name: Build npm packages
+        run: npm ci && npm run build
 
       - name: Set up Laravel environment
         run: cp .env.testing .env
